--- a/projects/VMTheme/DEBIAN/control
+++ b/projects/VMTheme/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: com.virenmohindra.VMTheme
 Name: VMTheme
-Depends: com.anemonethemeing.anemone
+Depends: com.anemonetheming.anemone
 Version: 1.0
 Architecture: iphoneos-arm
 Description: a simple winterboard theme
