--- a/projects/VMTheme/DEBIAN/control
+++ b/projects/VMTheme/DEBIAN/control
@@ -1,9 +1,9 @@
-Package: com.virenmohindra.VMTheme
+Package: io.github.virenmohindra.VMTheme
 Name: VMTheme
 Depends: com.anemonetheming.anemone
-Version: 1.0
+Version: 0.1
 Architecture: iphoneos-arm
-Description: a simple winterboard theme
-Maintainer: Viren Mohindra <you@example.com>
+Description: a simple Winterboard theme
+Maintainer: Viren Mohindra <viren.mohindra@gmail.com>
 Author: Viren Mohindra <viren.mohindra@gmail.com>
 Section: Themes (Springboard)
